syntax = "proto3";

package user;
option go_package="./user";

import "userModel.proto";

message Request {
  string ping = 1;
}
message Response {
  string pong = 1;
}

message DefaultResponse {
}

message GetUserRequest {
  int64 id = 1;
}
message GetUserResponse {
  int64 id = 1;
  string nickname = 2;
  string mobile = 3;
}
message DeleteUserRequest {
  int64 id = 1;
}
message CreateUserRequest {
  user.CreateOrUpdateUserReq in = 1;
}
message CreateUserResponse {
  int64 id = 1;
}
message UpdateUserRequest {
  int64 id = 1;
  user.CreateOrUpdateUserReq in = 2;
}

service Ping {
  rpc Ping(Request) returns(Response);
}

service User {
  rpc GetUser(GetUserRequest) returns(GetUserResponse);
  rpc CreateUser(CreateUserRequest) returns(CreateUserResponse);
  rpc UpdateUser(UpdateUserRequest) returns(DefaultResponse);
  rpc DeleteUser(DeleteUserRequest) returns(DefaultResponse);
}
